--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Mediagua</string>
-    <string name="bill">Bill</string>
-    <string name="consumption">Consumption</string>
-    <string name="settings">Settings</string>
-    <string name="about">About</string>
+    <string name="app_name" translatable="false">Mediagua</string>
+    <string name="bill">Factura</string>
+    <string name="consumption">Consumo</string>
+    <string name="settings">Configuracion</string>
+    <string name="about">Acerca de</string>
+    <string name="other">Otros</string>
+    <string name="monitor">Monitor</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="notificaciones">Notificaciones</string>
 </resources>
